# stellarAid-contract

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.soroban/: config.toml
campaign/src/: lib.rs
campaign/src/test/: freeze_tests.rs  upgrade_tests.rs
contracts/campaign/: Cargo.toml
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs
contracts/withdrawal/: Cargo.toml
contracts/withdrawal/src/: lib.rs
crates/tools/event-monitor/: Cargo.toml
docs/: DEPLOY.md  admin-multisig.md  launch-checklist.md
scripts/: deploy.sh
sdk/: Cargo.toml
sdk/src/: config.rs  errors.rs  lib.rs
sdk/src/horizon/: client.rs  mod.rs
sdk/src/setup/: mod.rs  token_setup.rs
sdk/src/soroban/: mod.rs  rpc_client.rs
sdk/src/utils/: keypair.rs  mod.rs
worker/: Cargo.toml
worker/src/: main.rs
