[workspace]
members = [
    "contracts/donation",
    "contracts/withdrawal",
    "contracts/campaign",
    "sdk",
    "worker",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
stellar-strkey = "0.0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
thiserror = "1"
