[package]
name = "event-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-rust-sdk = "0.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

[[bin]]
name = "event-monitor"
path = "src/main.rs"